--- a/src/styles/scss/styles.scss
+++ b/src/styles/scss/styles.scss
@@ -155,6 +155,9 @@ a {
     font-size: 1.1rem;
     padding-bottom: 2rem;
     text-align: right;
+    &__author {
+        padding-top: .3rem;
+    }
     &__link {
         color: $color;
         &:hover {
@@ -410,24 +413,23 @@ a {
 }
 
 .markdown-code {
-    &__wrap {
-        background-color: $color--white-smoke;
-        border: 1px solid $color--gray-d;
-        border-radius: 3px;
-        padding: 1em;
-        position: relative;
-    }
-}
-
-.markdown-code {
     font-size: 1.2rem;
     padding-right: 8rem;
     background-color: transparent;
     border: none;
     min-height: 11rem;
     width: 100%;
+    resize: vertical;
+    max-height: 40rem;
     &:focus {
         outline: none;
+    }
+    &__wrap {
+        background-color: $color--white-smoke;
+        border: 1px solid $color--gray-d;
+        border-radius: 3px;
+        padding: 1em;
+        position: relative;
     }
 }
 
@@ -445,5 +447,14 @@ a {
         transform: rotate(110deg);
         right: 1.4em;
         bottom: -1.1em;
+    }
+}
+
+.social-box {
+    float: left;
+    &__item {
+        display: table-cell;
+        padding-right: 1rem;
+        vertical-align: top;
     }
 }
