added linter ant travis configuration

--- a/src/styles/scss/styles.scss
+++ b/src/styles/scss/styles.scss
@@ -42,7 +42,7 @@ $screen--M: $break--M + 1;
 //  ---------------------------------------------
 
 @import '_gfm.scss';
-@import 'octicons';
+@import 'octicons.scss';
 
 //
 //  Extends
